[profile.release]
panic = 'unwind'
opt-level = 3

[profile.bench]
opt-level = 3

[profile.test]
opt-level = 1

[workspace]
members = [
    "crates/api",
    "crates/common",
    "crates/database", 
    "crates/db-macros",
    "crates/runtime",
    "crates/pgvector",
    # "crates/runtime-mods/evm",
    "crates/runtime-mods/roleplay",
    "crates/runtime-mods/character-creation",

    "services/voda-sandbox",
    "services/voda-service",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.8"
async-openai = "0.26.0"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
hex = { version = "0.4", features = ["serde"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
xsalsa20poly1305 = "0.9"
blake3 = "^1"
base64 = "0.21"

async-trait = "0.1"
lazy_static = "1.5.0"
once_cell = "1.19.0"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-rustls", 
    "postgres", 
    "macros", 
    "uuid", 
    "json",
    "chrono", 
    "ipnetwork",
    "bigdecimal"
] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
