[package]
name = "voda-database-pgvector"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid", "json"] }
async-trait = "0.1"
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
anyhow = "1.0"

pgvector = { version = "0.4", features = ["sqlx"]}